# WiSe-2425-AlPro

./: README.md
UB10/: CMakeLists.txt
UB10/examples/: aufg2.cpp  aufg3.cpp
UB10/include/data_structures/: binary_tree.hpp  hashtable.hpp  list.hpp  list_node.hpp
UB10/src/: binary_tree.cpp  hashtable.cpp  list.cpp  list_node.cpp
UB2/: main  main.cpp  uebungscode_02_02.cpp  uebungscode_02_03.cpp
UB3/: uebungscode_03_04.cpp
UB4/: TSYDENDORZHIEV.CPP  aufgabe2  aufgabe2.cpp  tsydendorzhiev
UB4/uebungscode_04/examples/: demo.cpp
UB4/uebungscode_04/include/: meine_funktionen.hpp
UB4/uebungscode_04/src/: meine_funktionen.cpp
UB5/examples/: aufg1.cpp  aufg2.cpp  aufg3.cpp
UB5/include/: minsort_in_place.hpp
UB5/include/hanoi/: hanoi.hpp  hanoi_loesen.hpp
UB5/src/: hanoi.cpp  hanoi_loesen.cpp
UB6/: CMakeLists.txt  CMakePresets.json
UB6/examples/: aufg1.cpp  aufg2.cpp
UB6/include/: meine_sortierverfahren.hpp
UB6/src/: meine_sortierverfahren.cpp
UB7/: CMakeLists.txt
UB7/examples/: aufg1.cpp  aufg2.cpp
UB7/include/simpler_graph/: simpler_graph.hpp
UB7/src/: simpler_graph.cpp
UB8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
UB8/examples/: aufg1.cpp  aufg2.cpp
UB8/include/data_structures/: binary_tree.hpp  binary_tree_node.hpp  list.hpp  list_node.hpp
UB8/src/: binary_tree.cpp  binary_tree_node.cpp  list.cpp  list_node.cpp
UB9/: CMakeLists.txt
UB9/examples/: aufg1.cpp  aufg2.cpp
UB9/include/data_structures/: binary_tree.hpp  binary_tree_node.hpp  doubly_linked_list.hpp  doubly_linked_list_node.hpp
UB9/src/: binary_tree.cpp  binary_tree_node.cpp  doubly_linked_list.cpp  doubly_linked_list_node.cpp
